--- a/setup/nginx.conf
+++ b/setup/nginx.conf
@@ -1,30 +1,61 @@
-server {
-	server_name bashupload.com;
-	listen 80;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
 
-  # --- Enable SSL if you want to ---
-  # listen 443 ssl default_server;
-	# listen [::]:443 ssl default_server;
-	# ssl on;
-	# ssl_certificate /etc/nginx/ssl/bundle.crt;
-	# ssl_certificate_key /etc/nginx/ssl/server.key;
+include /usr/share/nginx/modules/*.conf;
 
-	root /path/to/bashupload/web;
+events {
+    worker_connections 1024;
+}
+
+http {
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile            on;
+    tcp_nopush          on;
+    tcp_nodelay         on;
+    keepalive_timeout   65;
+    types_hash_max_size 4096;
+
+    include             /etc/nginx/mime.types;
+    default_type        application/octet-stream;
+
+    include /etc/nginx/conf.d/*.conf;
+
+    server {
+        listen       80;
+        listen       [::]:80;
+        server_name  _;
+        root /home/ec2-user/bashupload/web;
 	index index.php;
+
+        include /etc/nginx/default.d/*.conf;
+
+	location = /favicon.ico {
+		alias /home/ec2-user/bashupload/favicon.ico;
+	}
 
 	location / {
 		try_files $uri /index.php?$args;
 	}
 
-  # Be sure to update this if you have updated "STORAGE" param in config.php
 	location /files {
-    root /var;
-    internal;
-  }
+		root /home/ec2-user/bashupload;
+		internal;
+	}
 
 	location = /index.php {
-		include snippets/fastcgi-php.conf;
-		fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
+		include fastcgi.conf;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_pass unix:/var/run/php-fpm/www.sock;
 		fastcgi_read_timeout 1800;
 	}
+    }
 }
+
